--- a/static/themes/streamchat/theme.css
+++ b/static/themes/streamchat/theme.css
@@ -30,7 +30,20 @@ by changing this rule */
     float: none!important;
     white-space: pre-wrap!important;
     word-wrap: break-word!important;
-    margin-left: 120px!important;
+    padding-left: 5px!important;
+    max-width: 100%!important;
 }
 
+.kiwi-messagelist-message--compact {
+    padding: 0!important;
+    max-width: 100%!important;
+}
+
+.kiwi-workspace::before {
+    height: 0!important;
+}
+
+.kiwi-messagelist {
+    overflow: hidden;
+}
 
