--- a/static/themes/streamchat/theme.css
+++ b/static/themes/streamchat/theme.css
@@ -32,7 +32,7 @@ body {
     cursor: auto;
     float: none;
     word-break: initial;
-    position: relative;\
+    position: relative;
     line-height: 22px!important;
     left: 0!important;
     min-width: 110px!important;
