Emoji size change

--- a/static/themes/streamchat/theme.css
+++ b/static/themes/streamchat/theme.css
@@ -72,5 +72,6 @@ body {
 }
 
 .kiwi-messagelist-emoji {
-    width: 0.8em!important;
+    width: 1.1em!important;
+    font-size: 1.1em!important;
 }
