--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -27,7 +27,7 @@
     /* StateBrowser */
     --comp-statebrowser-fg: #fff;
     --comp-statebrowser-bg: #8e715c;
-    --comp-statebrowser-bg-networkname: #8e715c;
+    --comp-statebrowser-bg-networkname: #7b6351;
     --comp-statebrowser-channel-active-bg: #ffffff0d;
     --comp-statebrowser-channel-active-fg: #fff;
     --comp-usermenu-open-bg: #826958;
@@ -38,7 +38,7 @@
     --comp-sidebar-bg: #fff;
     --comp-sidebar-fg: #22231f;
     --comp-aboutbuffer-bg: rgba(0, 0, 0, 0.03);
-    --comp-aboutbuffer-header-bg: #42b992;
+    --comp-aboutbuffer-header-bg: #826958;
 
     /* Misc */
     --brand-link-normal: var(--brand-primary);
@@ -85,7 +85,7 @@
 }
 
 .kiwi-awaystatusindicator {
-    background: #41e8c9;
+    background: #78b17f;
 }
 .kiwi-awaystatusindicator.kiwi-awaystatusindicator--away {
     background: var(--brand-error);
@@ -102,6 +102,11 @@
 .kiwi-startup-common-section-info {
     border-left-color: var(--brand-primary);
 }
+
+.kiwi-statebrowser-network-status a {
+    color: #fff;
+}
+
 
 /* IRC Text Colours */
 .irc-fg-colour-white { color: #fff; }
