Default theme overhaul (#757)
* - I've reoganised the theme, removed duplicated and added a simple 'Information section' at the top of the file.
- I'm hoping that this will make editing the theme alot less time consuming, since it's easier to edit now

* - Our new standard theme is fully linted. I need a strong coffee and a lie down!

* - Our theme now uses vars! and it works!
- Some small colour changes were made, nothing big to note at all

* - Remving themes 'Coffee', 'Grayfox' and 'Sky' as these are not often discussed / used by our community to my knowledge
- I've made the Dark theme have the same standard as the Kiwi 'Default' theme

* - Added radioactive ( New format ) theme

* - Completed the nightswatch dark theme to the new standard :)

* - Adding in more vars

* - Adding more variables

* - Added in more vars
- Moving more css that is not colour based back to it's component

* - More variable replacement
- Removed messageInfo styling from the theme file and placed it within the component

* - Moved css to settingsAliases component

* - Message modern now has colour transitions
- Moving more css to components

* - moved Messagelist time css + other stuff

* - Push before pulling from master

* - Fix chan settings, notifications input display

* - Kiwi Close Styling moved to themes
- Away-Status-Indicator colours set

* - Tabs border bug fixed
-  Span label has opacity when active/not active now

* - Borders added back to inputs

* - Created a variable for the sidebar on components
- Nicklist styling changes
- Applied new border component variable to components in the 'main view' of Kiwi

* - Welcome 'Personal' startup fixed:
- Changes to button opacity
- Changes to form input borders
- Changes to primary button hover background colour

* - ADD: border to self user
- ADD: border colour to self user ( when open )

* - CHANGE: increase transiton of the messageUser icon by 0.1s
- CHANGE: message user ico

--- a/src/res/globalStyle.css
+++ b/src/res/globalStyle.css
@@ -46,10 +46,12 @@ select {
     vertical-align: middle;
     text-align: center;
     outline: none;
+    font-weight: 600;
 }
 
-.u-button:hover {
-    opacity: 0.75;
+.u-button-primary {
+    border: none;
+    border-bottom: 1px solid;
 }
 
 .u-form {
@@ -92,6 +94,7 @@ select {
     cursor: pointer;
     margin-left: 0;
     margin-right: 5px;
+    border: 2px solid;
 }
 
 .u-form input[type='checkbox']::after,
@@ -136,10 +139,19 @@ select {
     padding: 3px 5px;
     box-sizing: border-box;
     border-radius: 1px;
-    min-height: none;
+    border-radius: none;
+    border-bottom: 1px solid;
+    min-height: 0;
     overflow-x: hidden;
     overflow-y: auto;
     max-width: none;
+}
+
+.u-form .u-input,
+.u-form textarea {
+    border: 1px solid;
+    line-height: normal;
+    border-bottom: 2px solid;
 }
 
 .u-checkbox-wrapper {
@@ -151,6 +163,7 @@ select {
 .u-checkbox-wrapper input[type="radio"] {
     position: absolute;
     margin: 0;
+    border: 2px solid;
     top: 2px;
     left: 0;
 }
@@ -220,7 +233,6 @@ select {
 
 /* Globally style the close icon */
 .kiwi-close-icon {
-    background-color: #fc6262;
     color: #fff;
     border-radius: 0 0 0 4px;
     position: absolute;
@@ -228,10 +240,7 @@ select {
     top: 0;
     cursor: pointer;
     padding: 0.2em 0.4em;
-}
-
-.kiwi-close-icon:hover {
-    background-color: #fe7575;
+    transition: background 0.2s;
 }
 
 .kiwi-settings-advanced-table tr:hover {
