- Tested in our themes in the latest FF, something I have sadly failed to do when building these. No major issues, but best to check. - Resyled some of the form inputs slightly to make things more consistent across the board - Fixed bug on the ZNC welcome for the dark + nightwatch theme - FIxed bug on the darker themes where notification numbers where dark when they should have been light

--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -268,6 +268,21 @@
     color: #f1f1f1;
 }
 
+button.u-button.u-button-primary.u-submit.kiwi-welcome-znc-start,
+.kiwi-statebrowser-channel-label {
+    color: var(--brand-default-fg);
+}
+
+.kiwi-welcome-znc h2,
+.kiwi-welcome-znc-form .u-input-text-label {
+    color: var(--brand-default-bg);
+}
+
+.kiwi-welcome-znc-form .u-input-text {
+    background: transparent;
+    color: var(--brand-default-bg);
+}
+
 /* IRC Text Colours */
 .irc-fg-colour-white { color: #fff; }
 .irc-fg-colour-black { color: #000; }
