- Made sure the disconnected bar will always use the 'Brand Error' theme colour variable

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -642,6 +642,10 @@
     background: var(--brand-primary);
 }
 
+.kiwi-workspace::after {
+    background: var(--brand-error);
+}
+
 /* ---- Container ( Container.vue )  ---- */
 .kiwi-container-toggledraw-statebrowser,
 .kiwi-container-toggledraw-sidebar {
