- Add ELITE theme to the core config file - Fixed channel list themeing on the Elite theme - Fixed Dark theme channel filters colours - Fixed Nightswatch theme channel filters colours ( removed bottom border from button )

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -128,6 +128,10 @@
     border-top-color: #2d2d2d;
 }
 
+.kiwi-channellist table tbody tr:nth-child(even) {
+    background-color: #333333;
+}
+
 /* IRC Text Colours */
 .irc-fg-colour-white { color: #fff; }
 .irc-fg-colour-black { color: #000; }
